fix photo alignment

--- a/css/emotigif.css
+++ b/css/emotigif.css
@@ -18,7 +18,6 @@
 
 .camera {
   width: 340px;
-  display:inline-block;
 }
 
 .output {
